@@ -127,13 +127,14 @@ $labels['markread'] = 'Jako przeczytane';
 $labels['markunread'] = 'Jako nieprzeczytane';
 $labels['markflagged'] = 'Jako oflagowane';
 $labels['markunflagged'] = 'Jako nieoflagowane';
-$labels['messagemenu'] = 'Menu wiadomości';
+$labels['messageactions'] = 'Więcej akcji...';
 $labels['select'] = 'Zaznacz';
 $labels['all'] = 'Wszystkie';
 $labels['none'] = 'Anuluj';
 $labels['unread'] = 'Nieprzeczytane';
 $labels['flagged'] = 'Oznaczone';
 $labels['unanswered'] = 'Bez odpowiedzi';
+$labels['invert'] = 'Odwróć';
 $labels['filter'] = 'Filtr';
 $labels['compact'] = 'Porządkuj';
 $labels['empty'] = 'Opróżnij';
